--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-This is an external memory storage tool.
-It is designed to augment but not replace organic memory.
-As of yet it is designed only for the author's personal use.
+Notebook!
+
+Plain note-taking website thingy.
+Designed for the author's personal use.
+As of yet it has no authentication, so bury it behind your web server's authentication system.
